--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "@prisma/client": "^6.5.0",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0"
   }
